--- a/resources/css/pages/landing/_buttons.css
+++ b/resources/css/pages/landing/_buttons.css
@@ -52,7 +52,7 @@
 .back-to-top {
     position: fixed;
     bottom: 30px;
-    right: 30px;
+    right: 20px;
     width: 55px;
     height: 55px;
     background: rgba(130, 87, 229, 0.2);
@@ -94,4 +94,35 @@
 
 .back-to-top:hover i {
     transform: translateY(-5px);
+}
+
+/* WhatsApp Button */
+.whatsapp-button {
+    position: fixed;
+    bottom: 90px;
+    right: 20px;
+    background-color: #25D366; /* Color de WhatsApp */
+    color: white;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    z-index: 1000; /* Asegura que esté por encima de otros elementos */
+    transition: background-color 0.3s ease, width 0.3s ease, height 0.3s ease, font-size 0.3s ease, bottom 0.3s ease, right 0.3s ease;
+}
+
+.whatsapp-button:hover {
+    background-color: #1DA851; /* Un tono más oscuro al pasar el ratón */
+}
+
+.whatsapp-button-large {
+    width: 65px;
+    height: 65px;
+    font-size: 32px;
+    bottom: 20px;
+    right: 20px;
 }
