--- a/resources/css/pages/products/_features.css
+++ b/resources/css/pages/products/_features.css
@@ -97,14 +97,14 @@
 }
 
 .feature-icon i {
-    font-size: 50px !important;
+    /* font-size: 50px !important; removed to allow FA classes */
     color: #ffffff !important;
     -webkit-text-fill-color: #ffffff !important;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
+    /* display: flex; removed */
+    /* align-items: center; removed */
+    /* justify-content: center; removed */
+    /* width: 100%; removed */
+    /* height: 100%; removed */
 }
 
 .feature-title {
